# react-native-cpp-demo

./: .gitignore  App.js  README.md  TestExample.js  ToastExample.js  app.json  package.json
android/: build.gradle  settings.gradle
android/app/: BUCK  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/reactnativecppdemo/: HelloCxxPackage.java  (+4 more)
android/app/src/main/res/values/: strings.xml
cpp/cxxmodule/: Android.mk  Application.mk  HelloCxxModule.cpp  HelloCxxModule.h  SoWrapper.mk
cpp/hostobject/: CMakeLists.txt  TestBinding.cpp  TestBinding.h  jni.cpp
cpp/jni/: CMakeLists.txt  hello-jni.c  hello-jni.cpp
cpp/src/: Test.cpp
ios/: Podfile
ios/DynamicLibraryDemo.framework/: DynamicLibraryDemo  Info.plist
ios/DynamicLibraryDemo.framework/Headers/: DynamicLibraryDemo.h  Test.h
ios/DynamicLibraryDemo.framework/Modules/: module.modulemap
ios/DynamicLibraryDemo.framework/_CodeSignature/: CodeResources
ios/ReactNativeCppDemo/: AppDelegate.m  Info.plist  Mylibrary.h  Mylibrary.m  RCTHelloCxxModule.h  RCTHelloCxxModule.mm
ios/ReactNativeCppDemo.xcodeproj/: project.pbxproj
ios/ReactNativeCppDemo.xcodeproj/xcshareddata/xcschemes/: ReactNativeCppDemo-tvOS.xcscheme  ReactNativeCppDemo.xcscheme
ios/ReactNativeCppDemo.xcworkspace/: contents.xcworkspacedata
ios/ReactNativeCppDemo/Base.lproj/: LaunchScreen.xib
ios/ReactNativeCppDemo/example/cxxmodule/: RCTHelloCxxModule.h  RCTHelloCxxModule.mm
ios/ReactNativeCppDemo/example/jni/: TestModule.h  TestModule.m
ios/ReactNativeCppDemoTests/: ReactNativeCppDemoTests.m
(+5 files in other folders)
